crates/rascal/src/snapshots/rascal__tests__all_samples@inline_pcode.as.snap
---
source: crates/rascal/src/tests.rs
expression: result
input_file: samples/as2/inline_pcode.as
---
initializer:
  actions:
    - ConstantPool:
        - "-- start of a very special message --"
        - "-- end special message --"
        - "Hello, world!"
        - traceThroughPcode
    - DefineFunction:
        name: traceThroughPcode
        params:
          - message
        actions:
          actions:
            - Push:
                - Constant: 0
            - Trace
            - Push:
                - String: message
            - GetVariable
            - Trace
            - Push:
                - Constant: 1
            - Trace
          label_positions: {}
    - Push:
        - Constant: 2
        - Integer: 1
        - Constant: 3
    - CallFunction
    - Pop
  label_positions: {}
extra_modules: []
compile_options:
  swf_version: 15
  optimizations:
    fold_constants: true
    promote_variables_to_registers: true
custom_pcodes: []
