crates/rascal/src/snapshots/rascal__tests__all_samples@legacy_get_set.as.snap
---
source: crates/rascal/src/tests.rs
expression: result
input_file: samples/as2/legacy_get_set.as
---
initializer:
  actions:
    - ConstantPool:
        - y
        - x
        - "get(\"x\"): "
        - "get(x): "
        - "set(x, 15);"
        - "x = "
        - "y = "
    - Push:
        - Constant: 0
        - Integer: 5
    - DefineLocal
    - Push:
        - Constant: 1
        - Constant: 0
    - DefineLocal
    - Push:
        - Constant: 2
        - Constant: 1
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 3
        - Constant: 1
    - GetVariable
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 4
    - Trace
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Integer: 15
    - SetVariable
    - Push:
        - Constant: 5
        - Constant: 1
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 6
        - Constant: 0
    - GetVariable
    - Add2
    - Trace
  label_positions: {}
extra_modules: []
compile_options:
  swf_version: 15
  optimizations:
    fold_constants: true
    promote_variables_to_registers: true
custom_pcodes: []
