crates/rascal/src/snapshots/rascal__tests__all_samples@nested_break_continue.as.snap
---
source: crates/rascal/src/tests.rs
expression: result
input_file: samples/as2/nested_break_continue.as
---
initializer:
  actions:
    - ConstantPool:
        - i
        - "i = "
        - j
        - fn
        - trying to break from fn
        - "j = "
    - Push:
        - Constant: 0
        - Integer: 0
    - DefineLocal
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Integer: 4
    - Less2
    - Not
    - If: loc0000
    - Push:
        - Constant: 1
        - Constant: 0
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 2
        - Integer: 0
    - DefineLocal
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Integer: 4
    - Less2
    - Not
    - If: loc0003
    - Push:
        - Constant: 3
    - DefineFunction:
        name: ""
        params: []
        actions:
          actions:
            - Push:
                - Constant: 4
            - Trace
          label_positions: {}
    - DefineLocal
    - Push:
        - Constant: 5
        - Constant: 2
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Integer: 1
    - Equals2
    - Not
    - If: loc0006
    - Push:
        - Integer: 0
        - Constant: 3
    - CallFunction
    - Pop
    - Jump: loc0004
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Integer: 2
    - Equals2
    - Not
    - If: loc0007
    - Jump: loc0003
    - Push:
        - Constant: 2
        - Constant: 2
    - GetVariable
    - Increment
    - SetVariable
    - Jump: loc0005
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Integer: 1
    - Equals2
    - Not
    - If: loc0008
    - Jump: loc0001
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Integer: 2
    - Equals2
    - Not
    - If: loc0009
    - Jump: loc0000
    - Push:
        - Constant: 0
        - Constant: 0
    - GetVariable
    - Increment
    - SetVariable
    - Jump: loc0002
  label_positions:
    loc0002: 3
    loc0005: 15
    loc0006: 38
    loc0007: 45
    loc0004: 45
    loc0003: 50
    loc0008: 57
    loc0009: 64
    loc0001: 64
    loc0000: 69
extra_modules: []
compile_options:
  swf_version: 15
  optimizations:
    fold_constants: true
    promote_variables_to_registers: true
custom_pcodes: []
